cargo-run-output.txt
   Compiling Solver v0.1.0 (/home/konard/Archive/Code/Links/Solver)
error[E0599]: no method named `each_iter` found for struct `doublets::unit::Store` in the current scope
   --> src/main.rs:15:11
    |
15  |     store.each_iter([any, any, any]).for_each(|link| {
    |           ^^^^^^^^^ method not found in `doublets::unit::Store<usize, FileMapped<LinkPart<usize>>>`
    |
   ::: /home/konard/.cargo/git/checkouts/doublets-rs-3835f06948971044/39454b5/doublets/src/data/traits.rs:617:8
    |
617 |     fn each_iter(&self, query: impl ToQuery<T>) -> Self::ImplIterEach;
    |        --------- the method is available for `doublets::unit::Store<usize, FileMapped<LinkPart<usize>>>` here
    |
    = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
    |
1   | use doublets::DoubletsExt;
    |

For more information about this error, try `rustc --explain E0599`.
error: could not compile `Solver` due to previous error
